--- a/gb/22/12/31/n13896198.md
+++ b/gb/22/12/31/n13896198.md
@@ -1,68 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>超罕见 纯白色座头鲸现身哥斯达黎加海岸</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896408-Felipe-3-600x400.jpeg" />
 <h6>哥斯达黎加一名飞行员捕捉到一头纯白色座头鲸幼崽和它的妈妈一起在海中畅游的罕见景象。（Felipe Chavez提供）
 </h6>
 <hr>
-	<p>【大纪元2022年12月31日讯】（英文大纪元记者Louise Chambers报导／张雨霏编译）前不久，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%93%A5%E6%96%AF%E8%BE%BE%E9%BB%8E%E5%8A%A0.md#1">哥斯达黎加</a>一名飞行员在驾驶舱内发现了罕见的一幕：一头纯白色<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BA%A7%E5%A4%B4%E9%B2%B8.md#1">座头鲸</a>幼崽和它的妈妈一起在海中畅游，他不失时机拍下了几张“千载难逢”的珍贵照片。</p>
-<p>29岁的费利佩?查韦斯（Felipe Chavez）来自<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%93%A5%E6%96%AF%E8%BE%BE%E9%BB%8E%E5%8A%A0.md#1">哥斯达黎加</a>，是一名拥有11年经验的飞行教练，也是一名业余摄影师。10月2日，当他和一位朋友一起沿着哥斯达黎加诺萨拉区附近的太平洋海岸线飞行时，海面下一抹白色的身影突然吸引了他的目光。</p>
-<figure id="attachment_13896406" aria-describedby="caption-attachment-13896406" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13896406-Felipe-1.jpeg"><img class=" wp-image-13896406" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896406-Felipe-1.jpeg" alt="" width="599" b="432" /></a><figcaption id="caption-attachment-13896406" class="wp-caption-text">（Felipe Chavez提供）</figcaption></figure>
-<p>“我们花了一周时间试图找到一头<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%B2%B8%E9%B1%BC.md#1">鲸鱼</a>，几乎一整天都在上空盘旋，但一直没有收获”，查韦斯告诉《大纪元时报》，“当我看到这头鲸鱼时，我们以为它处于腹部朝上的姿势，我们甚至认为它已经死了。我个人起初还以为那是一块碎片或者垃圾，因为海面上有时会漂浮着这类东西。”</p>
-<p>然而，当查韦斯拿出相机拍照时，他注意到那是一头<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%99%BD%E5%8C%96.md#1">白化</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BA%A7%E5%A4%B4%E9%B2%B8.md#1">座头鲸</a>，它正在妈妈的陪伴下游泳。他说，通常其它座头鲸幼崽都喜欢在海水中嬉戏，但这头<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%99%BD%E5%8C%96.md#1">白化</a>小<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%B2%B8%E9%B1%BC.md#1">鲸鱼</a>却很平静，它只是在水中畅游，“在尽情地享受大海”。</p>
-<figure id="attachment_13896408" aria-describedby="caption-attachment-13896408" style="width: 401px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13896408-Felipe-3.jpeg"><img class=" wp-image-13896408" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896408-Felipe-3.jpeg" alt="" width="401" b="532" /></a><figcaption id="caption-attachment-13896408" class="wp-caption-text">（Felipe Chavez提供）</figcaption></figure>
+	<p>【大纪元2022年12月31日讯】（英文大纪元记者Louise Chambers报导／张雨霏编译）前不久，哥斯达黎加一名飞行员在驾驶舱内发现了罕见的一幕：一头纯白色座头鲸幼崽和它的妈妈一起在海中畅游，他不失时机拍下了几张“千载难逢”的珍贵照片。</p>
+<p>29岁的费利佩?查韦斯（Felipe Chavez）来自哥斯达黎加，是一名拥有11年经验的飞行教练，也是一名业余摄影师。10月2日，当他和一位朋友一起沿着哥斯达黎加诺萨拉区附近的太平洋海岸线飞行时，海面下一抹白色的身影突然吸引了他的目光。</p>
+<figure id="attachment_13896406" aria-describedby="caption-attachment-13896406" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13896406-Felipe-1.jpeg"><img decoding="async" class=" wp-image-13896406" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896406-Felipe-1.jpeg" alt="" width="599" b="432" /></a><figcaption id="caption-attachment-13896406" class="wp-caption-text">（Felipe Chavez提供）</figcaption></figure>
+<p>“我们花了一周时间试图找到一头鲸鱼，几乎一整天都在上空盘旋，但一直没有收获”，查韦斯告诉《大纪元时报》，“当我看到这头鲸鱼时，我们以为它处于腹部朝上的姿势，我们甚至认为它已经死了。我个人起初还以为那是一块碎片或者垃圾，因为海面上有时会漂浮着这类东西。”</p>
+<p>然而，当查韦斯拿出相机拍照时，他注意到那是一头白化座头鲸，它正在妈妈的陪伴下游泳。他说，通常其它座头鲸幼崽都喜欢在海水中嬉戏，但这头白化小鲸鱼却很平静，它只是在水中畅游，“在尽情地享受大海”。</p>
+<figure id="attachment_13896408" aria-describedby="caption-attachment-13896408" style="width: 401px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13896408-Felipe-3.jpeg"><img decoding="async" class=" wp-image-13896408" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896408-Felipe-3.jpeg" alt="" width="401" b="532" /></a><figcaption id="caption-attachment-13896408" class="wp-caption-text">（Felipe Chavez提供）</figcaption></figure>
 <p>拍照期间，查韦斯和他的朋友并不知道白色鲸鱼是多么稀有。在马萨达（Masada）降落后，查韦斯马上上网搜索，令他吃惊的是，他了解到全世界仅有三头有记载的白化座头鲸，其中最著名的是生活在澳大利亚海岸的“米伽罗”（Migaloo）。</p>
 <p>白化动物是指动物身体里因为缺少某种物质，细胞里不能合成黑色素，从而全身都没有颜色。由于外表颜色太过显眼，这类动物在海洋中更易成为捕食者的目标。</p>
 <p>“我们非常兴奋，但我们不知道这些照片会产生多大的影响”，他说，“我们一着陆，我就与哥斯达黎加的一位生物学家取得了联系。他告诉我这种情况非常罕见，并让我给他发一些照片。经过一番研究证实，这确实是一头白化座头鲸，这位生物学家也异常兴奋，因为这是哥斯达黎加第一次有人看到这种鲸鱼。”</p>
-<figure id="attachment_13896407" aria-describedby="caption-attachment-13896407" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13896407-Felipe-2.jpeg"><img class=" wp-image-13896407" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896407-Felipe-2.jpeg" alt="" width="400" b="531" /></a><figcaption id="caption-attachment-13896407" class="wp-caption-text">（Felipe Chavez提供）</figcaption></figure>
+<figure id="attachment_13896407" aria-describedby="caption-attachment-13896407" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13896407-Felipe-2.jpeg"><img decoding="async" class=" wp-image-13896407" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896407-Felipe-2.jpeg" alt="" width="400" b="531" /></a><figcaption id="caption-attachment-13896407" class="wp-caption-text">（Felipe Chavez提供）</figcaption></figure>
 <p>后来，他在<ahref="https://www.instagram.com/p/CjOicn6u2fP/">Instagram</a> 上分享了他拍摄的这只稀有鲸鱼的照片，不料，这些照片先是登上了哥斯达黎加的头条新闻，然后很快又吸引了国际观众的注意力。</p>
 <p>此后，许多生物学家、海员和前往海岸旅游的游客也有幸目睹了这只稀有的白色鲸鱼和它的妈妈一起游泳的景象。</p>
 <p>这位飞行员说：“我们的国家以完美的自然风光着称，享有“绿色国度”的称号。我们非常高兴，因为拥有这种鲸鱼对我们国家来说意义重大。”</p>
-<figure id="attachment_13896409" aria-describedby="caption-attachment-13896409" style="width: 399px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13896409-Felipe-4.jpeg"><img class=" wp-image-13896409" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896409-Felipe-4.jpeg" alt="" width="399" b="517" /></a><figcaption id="caption-attachment-13896409" class="wp-caption-text">飞行教练兼业余摄影师费利佩?查韦斯。（Felipe Chavez提供）</figcaption></figure>
+<figure id="attachment_13896409" aria-describedby="caption-attachment-13896409" style="width: 399px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13896409-Felipe-4.jpeg"><img decoding="async" class=" wp-image-13896409" src="https://i.epochtimes.com/assets/uploads/2022/12/id13896409-Felipe-4.jpeg" alt="" width="399" b="517" /></a><figcaption id="caption-attachment-13896409" class="wp-caption-text">飞行教练兼业余摄影师费利佩?查韦斯。（Felipe Chavez提供）</figcaption></figure>
 <p>作为一名忠实的摄影爱好者，查韦斯八年前得到了他的第一台相机。他决定充分利用他的国家令人惊叹的生物多样性和他独特的空中视角，通过航拍捕捉那些鲜见的自然景观。</p>
 <p>他说：“有时候你并不期待的事情，往往会在不经意间发生。我们很幸运能拍到这些照片，感觉像中了彩票一样。”◇</p>
 <p>责任编辑：韩玉#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/26/n12837510.md#1">通体呈玫瑰粉 澳洲海滩现罕见白化小海龟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/27/n13191323.md#1">“史无前例” 两只白虎鲸在日本海岸并排游泳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/20/n13317084.md#1">捕获率五千万分之一 稀有双色龙虾在美国展出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/30/n13340766.md#1">美国动物园迎来白色小袋鼠宝宝 超罕见</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/26/n12837510.md#1">通体呈玫瑰粉 澳洲海滩现罕见白化小海龟</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/27/n13191323.md#1">“史无前例” 两只白虎鲸在日本海岸并排游泳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/20/n13317084.md#1">捕获率五千万分之一 稀有双色龙虾在美国展出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/30/n13340766.md#1">美国动物园迎来白色小袋鼠宝宝 超罕见</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10085548.md#1" target="_blank">郑兢业：人吃与吃人（一 ）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11248166.md#1" target="_blank">【征文】袁斌：中共是怎么炮制“英雄人物”的</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/5/n11365941.md#1" target="_blank">【专访】澳参议员：制裁中共 不做迫害同谋</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961143.md#1">清明不扫墓？ 古人在清明节从事什么活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13959038.md#1">他说了什么好话 让阎王为他安排了大福分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935806.md#1">【思想领袖】中国正处于转折点吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966377.md#1">【晚间新闻】中国青壮年人口失踪案频发 引发猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966416.md#1">【时事军事】乌克兰空军飞行员正在用生命等待F-16</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965037.md#1">三男子将废弃高中改成高档公寓 入住率100%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964551.md#1">经济萧条下的大陆外卖员：太难做了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964954.md#1">专家：脱钩已开始 许多外企准备离开中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964701.md#1">机场劝架被吼“闭嘴” 秦岚高EQ举动获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964761.md#1">汤唯偕韩籍夫回娘家扫墓 两人随亲友素颜出镜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964562.md#1">1年痛失3至亲 大陆歌手刘维：户口本上只有我了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965981.md#1">将易烊千玺摆上台 成龙遭大陆网民围剿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965084.md#1">林青霞获港大颁名誉博士学位 深夜发文感恩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959660.md#1">吃杏仁减重有4诀窍 还防糖尿病、心脏病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966036.md#1">组图：纽约国际车展启幕 电动车成趋势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964970.md#1">为什么有些人说话的口音会改变？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949146.md#1">有钱了为什么还不快乐？重点在这3个关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958973.md#1">减重降压 这种茶每天来一杯还可抗癌降血糖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309864.md#1">【漂流传奇】荣耀背后的影坛传奇许鞍华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/31/n13896198.htm">超罕见 纯白色座头鲸现身哥斯达黎加海岸</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896198.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/31/n13896198.htm">超罕见 纯白色座头鲸现身哥斯达黎加海岸</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/31/n13896198.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
